backend/deploy/overlays/develop/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api-deployment
spec:
  template:
    spec:
      containers:
      - name: api
        resources:
          requests:
            memory: 1Gi
            cpu: 250m
          limits:
            memory: 1Gi
            cpu: 250m
