backend/deploy/overlays/develop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: farosian
spec:
  tls:
  - hosts:
    - farocity-develop.farosian.com
    secretName: farocity-develop-tls
  rules:
  - host: farocity-develop.farosian.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend
            port:
              number: 80
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: api
            port:
              number: 8080
      - pathType: Prefix
        path: /bundles
        backend:
          service:
            name: api
            port:
              number: 8080
      - pathType: Prefix
        path: /_wdt
        backend:
          service:
            name: api
            port:
              number: 8080
